# primal_hunter

./: .gitignore  The_Primal_Hunter_from986.epub  cspell.config.yaml  pyproject.toml
src/primal_hunter/: __init__.py  logger.py  pandoc_sh.py
src/primal_hunter/scripts/: __init__.py  loop.py  paths.py  process_epub_styles.py  stylesheet.py
src/primal_hunter/v2/: __init__.py  get_toc.py  main.py  scrape_chapter.py
static/: 0986-no-style.html
static/css/: primal-hunter.css  styles.css
static/epub/The Primal Hunter - 1/: content.opf  index_split_000.html  index_split_001.html  index_split_002.html  index_split_003.html  index_split_004.html  index_split_005.html  index_split_006.html  index_split_007.html  index_split_008.html  index_split_009.html  index_split_010.html  index_split_011.html  index_split_012.html  index_split_013.html  index_split_014.html  index_split_015.html  index_split_016.html  index_split_017.html  index_split_018.html  index_split_019.html  index_split_020.html  index_split_021.html  index_split_022.html  index_split_023.html  index_split_024.html  index_split_025.html  index_split_026.html  index_split_027.html  index_split_028.html  index_split_029.html  index_split_030.html  index_split_031.html  index_split_032.html  index_split_033.html  index_split_034.html  index_split_035.html  index_split_036.html  index_split_037.html  index_split_038.html  (+116 more)
static/epub/The Primal Hunter - 10 /: content.opf  toc.ncx  (+4 more)
static/html/: toc.html
static/json/: format.jsonc  replace.json  toc.json  xhtml.json
static/md/: 986.md  Primal Hunter Prompt.md
(+1074 files in other folders)
